<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"/>

    <EditText
        android:id="@+id/et_name"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_category"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"/>

    <Spinner
        android:id="@+id/et_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimated_price"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"/>
    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:maxLength="18"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_amount"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"/>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:textSize="20sp"
        android:maxLength="18"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"/>

    <EditText
        android:id="@+id/et_description"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <CheckBox
        android:id="@+id/item_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchased"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>