<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardBackgroundColor="#FFEC97"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:contentDescription="@string/why_do_you_need_this"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:ems="6"
            card_view:layout_constraintStart_toEndOf="@+id/item_icon"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:ems="6"
            card_view:layout_constraintStart_toEndOf="@+id/item_icon"
            card_view:layout_constraintTop_toBottomOf="@+id/item_name" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:ems="6"
            card_view:layout_constraintStart_toEndOf="@+id/item_icon"
            card_view:layout_constraintTop_toBottomOf="@+id/item_price" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchased"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/item_icon"
            card_view:layout_constraintTop_toBottomOf="@+id/item_quantity" />

        <Button
            android:id="@+id/btn_view"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/item_detail"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toTopOf="@+id/btn_detail"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/item_edit"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toTopOf="@+id/btn_delete"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="85dp"
            android:layout_height="40dp"
            android:text="@string/delete"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

